--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <!-- google page layout -->
     <section>
+      <h1>Hello to Our Google App</h1>
       <h1>
         <p class="G">G</p>
         <p class="O">o</p>
